resolved the white space issue

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -16,7 +19,8 @@
       crossorigin="anonymous"
     />
 
-    <link rel="manifest" href="manifest.json" />    
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="./index.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,8 +31,10 @@
     -->
     <title>React App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body id="blackBackground">
+    <noscript
+      >You need to enable JavaScript to run this app.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
